Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -189,26 +189,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'trip_distance': '18.379999999999999',\n",
-       " 'pickup_latitude': '40.64499',\n",
-       " 'pickup_longitude': '-73.781149999999997'}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'trip_distance': '18.379999999999999', 'pickup_latitude': '40.64499', 'pickup_longitude': '-73.781149999999997'}\n"
+     ]
     }
    ],
    "source": [
     "parsed_trips = parse_trips(trips)\n",
     "parsed_trips and parsed_trips[0]\n",
-    "\n",
+    "print(parsed_trips[0])\n",
     "\n",
     "# {'pickup_latitude': '40.64499',\n",
     "#  'pickup_longitude': '-73.78115',\n",
