Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
    ],
    "source": [
     "parsed_trips = parse_trips(trips)\n",
-    "parsed_trips and parsed_trips[0]\n",
+    "#parsed_trips and parsed_trips[0]\n",
     "print(parsed_trips[0])\n",
     "\n",
     "# {'pickup_latitude': '40.64499',\n",
