--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,7 @@
    "outputs": [],
    "source": [
     "def float_values(trips):    \n",
-    "    return list(map(lambda trip: ))"
+    "    return list(map(lambda trip:{'trip_distance':trip['trip_distance'], 'pickup_latitude': trip['pickup_latitude'], 'pickup_longitude': trip['pickup_longitude']}, trips)) ))"
    ]
   },
   {
