--- a/index.ipynb
+++ b/index.ipynb
@@ -471,7 +471,7 @@
    "outputs": [],
    "source": [
     "def to_marker(location):\n",
-    "    return "
+    "    return folium.CircleMarker"
    ]
   },
   {
