--- a/index.ipynb
+++ b/index.ipynb
@@ -512,7 +512,7 @@
    "outputs": [],
    "source": [
     "def markers_from_trips(trips):\n",
-    "    return list(map(lambda trip: to_marker(location))"
+    "    return list(map(lambda trip: to_marker(location(trip))"
    ]
   },
   {
