Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -512,7 +512,7 @@
    "outputs": [],
    "source": [
     "def markers_from_trips(trips):\n",
-    "    locat\n",
+    "    locations = list(map(lambda triop))\n",
     "    return list(map(lambda trip: to_marker(location(trip), trips)))"
    ]
   },
