--- a/index.ipynb
+++ b/index.ipynb
@@ -512,7 +512,7 @@
    "outputs": [],
    "source": [
     "def markers_from_trips(trips):\n",
-    "    locations = list(map(lambda trip: location(trip))\n",
+    "    locations = list(map(lambda trip: location(trip), trips))\n",
     "    return list(map(lambda trip: to_marker(location(trip), trips)))"
    ]
   },
