--- a/index.ipynb
+++ b/index.ipynb
@@ -513,7 +513,7 @@
    "source": [
     "def markers_from_trips(trips):\n",
     "    locations = list(map(lambda trip: location(trip), trips))\n",
-    "    return list(map(lambda trip: to_marker(location(trip), trips)))"
+    "    return list(map(lambda trip: to_marker(location), loc)))"
    ]
   },
   {
