Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -507,13 +507,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "def markers_from_trips(trips):\n",
     "    locations = list(map(lambda trip: location(trip), trips))\n",
-    "    return list(map(lambda trip: to_marker(location), loc)))"
+    "    return list(map(lambda trip: to_marker(location), locations))"
    ]
   },
   {
