--- a/index.ipynb
+++ b/index.ipynb
@@ -507,13 +507,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "def markers_from_trips(trips):\n",
     "    locations = list(map(lambda trip: location(trip), trips))\n",
-    "    return list(map(lambda : to_marker(location), locations))"
+    "    return list(map(lambda location: to_marker(location), locations))"
    ]
   },
   {
