--- a/index.ipynb
+++ b/index.ipynb
@@ -606,7 +606,7 @@
    "outputs": [],
    "source": [
     "def map_from(location, zoom_amount):\n",
-    "    pass"
+    "    return folium"
    ]
   },
   {
