--- a/index.ipynb
+++ b/index.ipynb
@@ -601,12 +601,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "def map_from(location, zoom_amount):\n",
-    "    return folium.Map(location = location, zo)"
+    "    return folium.Map(location = location, zoom_start = zoom_amount)"
    ]
   },
   {
