--- a/index.ipynb
+++ b/index.ipynb
@@ -679,7 +679,7 @@
    "outputs": [],
    "source": [
     "def add_markers(markers, map_obj):\n",
-    "    markers_from\n",
+    "    markers_from_\n",
     "    pass"
    ]
   },
