--- a/index.ipynb
+++ b/index.ipynb
@@ -748,7 +748,7 @@
     "import math\n",
     "\n",
     "def distance_location(selected_trip, neighbor_trip):\n",
-    "    re"
+    "    return sqrt( ()"
    ]
   },
   {
