Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -748,7 +748,7 @@
     "import math\n",
     "\n",
     "def distance_location(selected_trip, neighbor_trip):\n",
-    "    return sqrt( (neighbor_trip['pickup_longitude']-selected_trip['pickup_longitude'])**2"
+    "    return sqrt( (neighbor_trip['pickup_longitude']-selected_trip['pickup_longitude'])*2"
    ]
   },
   {
