--- a/index.ipynb
+++ b/index.ipynb
@@ -789,6 +789,7 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
+    "    trip_with_distan\n",
     "    \n",
     "    pass"
    ]
