Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -789,7 +789,8 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
-    "    trip_with_distance = neighbo\n",
+    "    trip_with_distance = neighbor_trip.copy()\n",
+    "    \n",
     "    \n",
     "    pass"
    ]
