--- a/index.ipynb
+++ b/index.ipynb
@@ -790,7 +790,7 @@
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
     "    trip_with_distance = neighbor_trip.copy()\n",
-    "    trip_with_distance[]\n",
+    "    trip_with_distance['distance_from_selecte']\n",
     "    \n",
     "    pass"
    ]
